--- a/client/package.json
+++ b/client/package.json
@@ -10,13 +10,18 @@
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@mdi/font": "^6.2.95",
+    "axios": "^0.22.0",
     "core-js": "^3.6.5",
+    "js-cookie": "^3.0.1",
     "vue": "^2.6.11",
-    "vuetify": "^2.4.0"
+    "vue-router": "^3.2.0",
+    "vuetify": "^2.4.0",
+    "vuex": "^3.6.2"
   },
   "devDependencies": {
     "@vue/cli-plugin-babel": "~4.5.0",
     "@vue/cli-plugin-eslint": "~4.5.0",
+    "@vue/cli-plugin-router": "~4.5.0",
     "@vue/cli-service": "~4.5.0",
     "babel-eslint": "^10.1.0",
     "eslint": "^6.7.2",
