--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "core-js": "^3.6.5",
     "js-cookie": "^3.0.1",
     "moment": "^2.29.1",
+    "qrcode.vue": "^1.7.0",
     "vue": "^2.6.11",
     "vue-router": "^3.2.0",
     "vuetify": "^2.4.0",
