--- a/client/package.json
+++ b/client/package.json
@@ -11,6 +11,7 @@
     "@fortawesome/fontawesome-free": "^5.15.4",
     "@mdi/font": "^6.2.95",
     "axios": "^0.22.0",
+    "compression-webpack-plugin": "^6.1.1",
     "core-js": "^3.6.5",
     "js-cookie": "^3.0.1",
     "moment": "^2.29.1",
